DuPont DevSB/src/objects/pse__Backlog_Detail__c.object
<CustomObject>
    <customHelpPage>pse__BacklogDetailHelp</customHelpPage>
    <description>Contains projected billings for a single project, region, practice, or group over a single time period. Revenue data can come from billable assignments or milestones. Information on the backlog calculation job is contained in a parent backlog calculation record.</description>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>psa_report__Time_Period_Type__c</fullName>
        <formula>TEXT( pse__Time_Period__r.pse__Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Period Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related assignment - applies only if Resource is also set</description>
        <inlineHelpText>Related assignment - applies only if Resource is also set</inlineHelpText>
        <label>Assignment</label>
        <referenceTo>pse__Assignment__c</referenceTo>
        <relationshipLabel>Backlog Details</relationshipLabel>
        <relationshipName>Backlog_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Backlog_Calculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Backlog Calculation</label>
        <referenceTo>pse__Backlog_Calculation__c</referenceTo>
        <relationshipLabel>Backlog Details</relationshipLabel>
        <relationshipName>Backlog_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billings__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Billings amount used to calculate unscheduled revenue</inlineHelpText>
        <label>Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Bookings__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The bookings amount used to calculate the unscheduled revenue amount</inlineHelpText>
        <label>Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <formula>pse__Time_Period__r.pse__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Backlog Details</relationshipLabel>
        <relationshipName>Backlog_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Inactive_Project_Backlog__c</fullName>
        <label>Inactive Project Backlog</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Is_Reusable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal PSE field not intended for display</description>
        <label>Is Reusable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Milestone_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Milestone Revenue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Backlog Details</relationshipLabel>
        <relationshipName>Backlog_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Backlog Details</relationshipLabel>
        <relationshipName>Backlog_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Backlog Details</relationshipLabel>
        <relationshipName>Backlog_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Backlog Details</relationshipLabel>
        <relationshipName>Backlog_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of days scheduled based on assignment schedules and schedule exceptions. For example, if an assignment has a schedule of 4 hours M-W and the calculation period is an inclusive period of 2 weeks, the value would be 6 days (3 days/week * 2)</description>
        <inlineHelpText>Total number of days scheduled based on assignment schedules and schedule exceptions. For example, if an assignment has a schedule of 4 hours M-W and the calculation period is an inclusive period of 2 weeks, the value would be 6 days (3 days/week * 2)</inlineHelpText>
        <label>Scheduled Days</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Scheduled_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of hours scheduled based on assignment schedules and schedule exceptions during the calculation time range.</description>
        <inlineHelpText>The number of hours scheduled based on assignment schedules and schedule exceptions during the calculation time range.</inlineHelpText>
        <label>Scheduled Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <formula>pse__Time_Period__r.pse__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Backlog Details</relationshipLabel>
        <relationshipName>Backlog_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Time_Revenue__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Billable revenue from scheduled assignments. For hourly assignments, this is the number of scheduled hours * bill rate. For assignments with a daily bill rate, this is the number of scheduled days * bill rate.</description>
        <inlineHelpText>Billable revenue from scheduled assignments. For hourly assignments, this is the number of scheduled hours * bill rate. For assignments with a daily bill rate, this is the number of scheduled days * bill rate.</inlineHelpText>
        <label>Time Revenue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Unscheduled_Revenue__c</fullName>
        <label>Unscheduled Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Backlog Detail</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BD{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Backlog Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backlog Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>